Initial code version of coalitions mode.

--- a/software/Raspberry/config.ini
+++ b/software/Raspberry/config.ini
@@ -1,8 +1,8 @@
 [settings]
 BRIGHT = 5000
 DARK = 0
-MAX_LUX = 10
-MIN_LUX = 0
+MAX_LUX = 3
+MIN_LUX = 1
 ADC_PIN = 3
 CLUSTERS_NUM = 5
 OASIS_ADDR = 5
@@ -28,3 +28,16 @@ COLOR_USED = 16730624
 COLOR_COVID = 15011589
 COLOR_EXAM = 2101670
 COLOR_HERE = 16056520
+
+COMMAND_SET_C_COLORS = 65
+COMMAND_SET_C_MATRIX = 193
+COLOR_EMP = 0
+COLOR_ALP = 9498256 
+#0x0090EE90
+COLOR_CAP = 11540255
+#0x00B0171F
+COLOR_SAL = 9662683
+#0x009370DB
+COLOR_MED = 65535
+#0x0000FFFF
+#COALITION_BRIGHTNESS = 30%
