Kostya's latest work on his branch.

--- a/software/Raspberry/config.ini
+++ b/software/Raspberry/config.ini
@@ -14,7 +14,7 @@ OASIS_LEDS = 87
 MIRAGE_LEDS = 138
 ILLUSION_LEDS = 59
 ATLANTIS_LEDS = 117
-ATRIUM_LEDS = 15
+ATRIUM_LEDS = 30
 OASIS_ROOM_COUNT = 1
 MIRAGE_ROOM_COUNT = 1
 ILLUSION_ROOM_COUNT = 0
@@ -32,12 +32,13 @@ COLOR_HERE = 16056520
 COMMAND_SET_C_COLORS = 65
 COMMAND_SET_C_MATRIX = 193
 COLOR_EMP = 0
-COLOR_ALP = 9498256 
+COLOR_ALP = 12032
 #0x0090EE90
-COLOR_CAP = 11540255
+COLOR_CAP = 6225920
+#16711680
 #0x00B0171F
-COLOR_SAL = 9662683
-#0x009370DB
-COLOR_MED = 65535
-#0x0000FFFF
+COLOR_SAL = 8454178
+#0x009370DB purple
+COLOR_MED = 111
+#0x0000FFFF CYAN
 #COALITION_BRIGHTNESS = 30%
